--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "@types/node": "^20.0.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite-plugin-env-types": "^0.0.4"
+    "@vitejs/plugin-react": "^4.2.0"
   }
 }
